# saturation

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md
apps/: CMakeLists.txt  run.cc
include/saturation/: inequalities.h
src/: CMakeLists.txt  inequalities.cc
tests/: CMakeLists.txt  test_saturation.cc
